Refactor to Java 8